Add Java9+ problems description